<resources>
    <string name="testTitle"> <font color="#303F9F">The title</font></string>
    <string name="app_name">SmartQSale</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pantalla_principal">Mi Negocio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="control_peso_opcion">Control por peso</string>
    <string name="control_stock_opcion">Control de stock</string>
    <string name="estado_producto_cabecera">Estado : </string>
    <string name="estado_activo">Activo</string>
    <string name="estado_inactivo">Inactivo</string>
    <string name="estado_visible_cabecera">Visible para ventas : </string>
    <string name="estado_visible">Visible</string>
    <string name="estado_invisible">Invisible</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="RegistroProducto_cabeceraTab_DatosBasicos">Datos básicos</string>
    <string name="estado_venta_normal">COMPLETA</string>
    <string name="estado_venta_cancelar">VENTA CANCELADA</string>
    <string name="title_activity_flujo_caja_main">FlujoCajaMainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_caja_flujo">CajaFlujoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_demo">demo</string>
    <string name="title_activity_registro_producto">ActivityRegistroProducto</string>
    <string name="title_activity_registro__producto">Registro Producto</string>
    <string name="title_activity_scanner">ActivityScanner</string>
    <string name="title_activity_inventario_productos">InventarioProductos</string>
    <string name="EstadoProductoActivo">A</string>
    <string name="EstadoProductoInactivo">I</string>
    <string name="EstadoProductoVisible">V</string>
    <string name="EstadoProductoInvisible">I</string>
    <string name="CodigoProducto">Codigo</string>
    <string name="EstadoExistenciaProducto">Estado</string>
    <string name="TabDatosBasicos">Datos Básicos</string>
    <string name="TabRespresentacionProducto">Representación</string>
    <string name="TabVariantes">Variantes</string>
    <string name="TabEstados">Estados</string>
    <string name="title_activity_registro_categoria">ActivityRegistroCategoria</string>
    <string name="title_activity_login_principal">Acceso</string>
    <string name="title_activity_login_principal12">Acceso</string>
    <string name="EstadoNuevoUsuario">NuevoUsuario</string>
    <string name="title_activity_listado_clientes">ListadoClientes</string>
    <string name="title_activity_listado_vendedores">ListadoVendedores</string>
    <string name="TituloPersonaJuridica">Persona Jurídica</string>
    <string name="TituloPersonaNatural">Persona Natural</string>
    <string name="FechaInicial">Fecha Inicial</string>
    <string name="FechaFinal">Fecha Final</string>
    <string name="Ingreso_inicial_inventario">INI</string>
    <string name="Ingreso_por_compra">INC</string>
    <string name="Ingreso_por_transferencia">INT</string>
    <string name="Ingreso_por_ajuste_inventario">INA</string>
    <string name="Salida_por_venta">SAV</string>
    <string name="Salida_por_transferencia">SAT</string>
    <string name="Salida_por_caducidad">SAC</string>
    <string name="Salida_por_devolucion_proveedor">SAD</string>
    <string name="Salida_ajuste_inventario">SAJ</string>
    <string name="FechaCompra">Fecha compra</string>
    <string name="FechaMovimiento">Fecha movimiento</string>
    <string name="FechaGuia">Fecha guia</string>
    <string name="title_activity_pin_reset_app">PinResetApp</string>
    <string name="title_activity_reporte_ventas_productos">ReporteVentasProductos</string>
    <string name="title_activity_listado_tiendas">ListadoTiendas</string>
    <string name="title_activity_lista_impresoras_areas">ListaImpresorasAreas</string>
    <string name="status_list">Lista de dispositivos</string>
    <string name="status_removed">Device Detached</string>
    <string name="status_added">Device Attached</string>
    <string name="status_zero_device">No hay dispositivos USB</string>
    <string name="status_find_device">Se encontraron dispositivos USB</string>
    <string name="title_activity_entrega_pedido">EntregaPedidoAct</string>
    <string-array name="colores_seleccion_producto">
        <item>#cfcfcf</item>
        <item>#fa4e4e</item>
        <item>#ffaf38</item>
        <item>#fff239</item>
        <item>#42ff52</item>
        <item>#4d77ff</item>
        <item>#ff60dd</item>
        <item>#65fff2</item>

    </string-array>
    <string-array name="shape_form">
        <item name="rhombus">rhombus</item>
        <item name="square">square</item>
        <item name="circle">circle</item>
        <item name="octagon">octagon</item>
    </string-array>
</resources>