<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_app"
    android:fitsSystemWindows="true"
    tools:context=".Activitys.Registro_Producto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/arrow_back_home"
            app:navigationIconTint="@color/colorPrimary"
            app:title="Agregar producto"
            app:titleTextColor="@color/gray_900"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/AppTheme.TabLayout.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/black"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@color/gray_600"
            app:tabMinWidth="0dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/TabDatosBasicos" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/TabRespresentacionProducto" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/TabEstados" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabActionRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:visibility="visible"
        app:fab_colorNormal="@color/status_success"
        app:fab_colorPressed="@color/status_success_dark"
        app:fab_size="normal"
        android:src="@drawable/save_white" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/actionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:menu_animationDelayPerItem="50"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_buttonSpacing="8dp"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccent"
        app:menu_fab_size="normal"
        app:menu_icon="@drawable/settings"
        app:menu_labels_position="left"
        app:menu_labels_showShadow="true"
        app:menu_openDirection="up">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorPrimaryDark"
            app:fab_label="Editar producto"
            app:fab_size="mini"
            android:src="@drawable/pencil_edit" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/status_error"
            app:fab_colorPressed="@color/status_error_dark"
            app:fab_label="Eliminar producto"
            app:fab_size="mini"
            android:src="@drawable/ic_delete_white_24dp" />
    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
